<resources>
    <string name="app_name">Expect Launcher</string>
    <string name="app_size">App Size</string>
    <string name="change_position">Move/Delete</string>
    <string name="app_more">More Setting</string>
    <string name="icon_size">Icon Size</string>

    <string name="path_search" translatable="false">
       M141,17 A9,9 0 1,1 142,16 L149,23
    </string>
    <string name="search_string">Search</string>
    <string name="hidden_app_title">Show app title</string>
    <string name="visible_app_title">Hide app title</string>
    <string name="color_square">Color Square</string>
    <string name="white_square">White Square</string>
    <string name="normal">Normal</string>
    <string name="folder">Folder</string>
    <string name="preference">Preference</string>
    <string name="package_name" translatable="false">com.teamll.expectlauncher</string>
    <string name="launcher_setting">Launcher Setting</string>
    <string name="folders">Folders</string>
    <string name="app_drawer">App Drawer</string>
    <string name="dock">Dock</string>
    <string name="about">About us</string>
    <string name="app">Applications</string>
    <string name="add_wallpaper">Add wallpaper</string>
    <string name="remove_last_widget">Remove last widget</string>
    <string name="add_widget">Add Widget</string>
    <string name="reload_app">Reload app list</string>
    <string name="restore_app">Restore hidden apps</string>
</resources>
