<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    android:focusable="true"
    android:clickable="true">
    <View
        android:id="@+id/background_toolbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/FlatOrange"
        app:layout_constraintBottom_toBottomOf="@id/back_button"/>
    <ImageView
        android:id="@+id/back_button"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:paddingTop="19dp"
        android:paddingBottom="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_button"
        android:tint="@color/a_white"
        />
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_button"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        android:paddingStart="65dp"
        android:paddingEnd="65dp"
        android:text="@string/launcher_setting"
        android:maxLines="1"
        android:ellipsize="end"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/a_white"/>
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:id="@+id/dock_panel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/dock"
                app:layout_constraintBottom_toBottomOf="@id/dock"
                app:layout_constraintStart_toStartOf="@id/icon_dock"
                app:layout_constraintEnd_toEndOf="@id/next_dock"
                android:background="@drawable/black_rounded_big"/>
            <ImageView
                android:id="@+id/icon_dock"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_dock_black_24dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:tint="@color/FlatRed"
                app:layout_constraintTop_toTopOf="@id/dock"
                app:layout_constraintBottom_toBottomOf="@id/dock"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/dock"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/dock"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:ellipsize="end"
                android:textStyle="bold"
                android:textColor="@color/setting_label_color"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon_dock"
                app:layout_constraintEnd_toStartOf="@id/next_dock"/>
            <ImageView
                android:id="@+id/next_dock"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/next"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                app:layout_constraintTop_toTopOf="@id/dock"
                app:layout_constraintBottom_toBottomOf="@id/dock"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/app_panel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/app"
                app:layout_constraintBottom_toBottomOf="@id/app"
                app:layout_constraintStart_toStartOf="@id/icon_dock"
                app:layout_constraintEnd_toEndOf="@id/next_app"
                android:background="@drawable/black_rounded_big"/>
            <TextView
                android:id="@+id/app"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/app"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:textStyle="bold"
                android:textColor="@color/setting_label_color"

                app:layout_constraintTop_toBottomOf="@id/dock"
                app:layout_constraintStart_toEndOf="@id/icon_app"
                app:layout_constraintEnd_toStartOf="@id/next_app"/>
            <ImageView
                android:id="@+id/next_app"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/next"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                app:layout_constraintTop_toTopOf="@id/app"
                app:layout_constraintBottom_toBottomOf="@id/app"
                app:layout_constraintEnd_toEndOf="parent"/>
            <ImageView
                android:id="@+id/icon_app"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_apps_black_24dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:tint="@color/FlatRed"
                app:layout_constraintTop_toTopOf="@id/app"
                app:layout_constraintBottom_toBottomOf="@id/app"
                app:layout_constraintStart_toStartOf="parent"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/app_drawer"
                app:layout_constraintStart_toStartOf="@id/icon_app_drawer"
                app:layout_constraintBottom_toBottomOf="@id/folders"
                app:layout_constraintEnd_toEndOf="@id/next_app_drawer"
                android:background="@drawable/black_rounded_big"/>
            <TextView
                android:visibility="gone"
                android:id="@+id/app_drawer"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/app_drawer"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:ellipsize="end"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="@color/setting_label_color"

                app:layout_constraintTop_toBottomOf="@id/app"
                app:layout_constraintStart_toEndOf="@id/icon_app_drawer"
                app:layout_constraintEnd_toStartOf="@id/next_app"/>
            <ImageView
                android:visibility="gone"
                android:id="@+id/next_app_drawer"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/next"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                app:layout_constraintTop_toTopOf="@id/app_drawer"
                app:layout_constraintBottom_toBottomOf="@id/app_drawer"
                app:layout_constraintEnd_toEndOf="parent"/>
            <ImageView
                android:visibility="gone"
                android:id="@+id/icon_app_drawer"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_grid_on_black_24dp"
                android:paddingTop="12dp"
                android:tint="@color/FlatRed"
                android:paddingBottom="12dp"
                app:layout_constraintTop_toTopOf="@id/app_drawer"
                app:layout_constraintBottom_toBottomOf="@id/app_drawer"
                app:layout_constraintStart_toStartOf="parent"/>
            <View
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="2dp"
                app:layout_constraintTop_toBottomOf="@id/app_drawer"
                app:layout_constraintBottom_toTopOf="@id/folders"
                app:layout_constraintStart_toStartOf="@id/app_drawer"
                app:layout_constraintEnd_toEndOf="@id/next_app_drawer"
                android:background="#06060606"
                />
            <TextView
                android:visibility="gone"
                android:id="@+id/folders"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/folders"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:ellipsize="end"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="@color/setting_label_color"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintTop_toBottomOf="@id/app_drawer"
                app:layout_constraintStart_toEndOf="@id/icon_folders"
                app:layout_constraintEnd_toStartOf="@id/next_dock"/>
            <ImageView
                android:visibility="gone"
                android:id="@+id/next_folders"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/next"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                app:layout_constraintTop_toTopOf="@id/folders"
                app:layout_constraintBottom_toBottomOf="@id/folders"
                app:layout_constraintEnd_toEndOf="parent"/>
            <ImageView
                android:visibility="gone"
                android:id="@+id/icon_folders"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_folder_black_24dp"
                android:tint="@color/FlatRed"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                app:layout_constraintTop_toTopOf="@id/folders"
                app:layout_constraintBottom_toBottomOf="@id/folders"
                app:layout_constraintStart_toStartOf="parent"/>
            <View
                android:id="@+id/about_panel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/about"
                app:layout_constraintBottom_toBottomOf="@id/about"
                app:layout_constraintStart_toStartOf="@id/icon_about"
                app:layout_constraintEnd_toEndOf="@id/next_about"
                android:background="@drawable/black_rounded_big"/>
            <TextView
                android:id="@+id/about"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/about"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:ellipsize="end"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="@color/setting_label_color"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintTop_toBottomOf="@id/folders"
                app:layout_constraintStart_toEndOf="@id/icon_about"
                app:layout_constraintEnd_toStartOf="@id/next_about"/>
            <ImageView
                android:id="@+id/next_about"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/next"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                app:layout_constraintTop_toTopOf="@id/about"
                app:layout_constraintBottom_toBottomOf="@id/about"
                app:layout_constraintEnd_toEndOf="parent"/>
            <ImageView
                android:id="@+id/icon_about"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_school_black_24dp"
                android:tint="@color/FlatRed"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                app:layout_constraintTop_toTopOf="@id/about"
                app:layout_constraintBottom_toBottomOf="@id/about"
                app:layout_constraintStart_toStartOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>