<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/dp_8"
    android:layout_marginTop="@dimen/dp_8"
    android:paddingBottom="8dp">
    <ImageView
        android:id="@+id/toggleButton"
        android:layout_width="35dp"
        android:layout_height="5dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/slide_up_down_icon_drawable"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@id/icon_type_label"
        app:layout_constraintBottom_toBottomOf="@id/text_none"
        app:layout_constraintStart_toStartOf="@id/icon_type_label"
        app:layout_constraintEnd_toEndOf="@id/icon_type_label"
        android:background="@drawable/count_round"/>
    <TextView
        android:layout_marginTop="0dp"
        android:id="@+id/icon_type_label"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/toggleButton"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="Icon type"
        android:textColor="#FF444444"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/type_none"
        android:layout_width="62dp"
        android:layout_height="62dp"
        app:layout_constraintTop_toBottomOf="@id/icon_type_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/type_white_square"
        app:riv_border_color="@color/FlatBlue"
        app:riv_corner_radius="12dp"

        android:background="@android:color/transparent"
        app:riv_mutate_background="true"
        />
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/type_white_square"
        android:layout_width="62dp"
        android:layout_height="62dp"
        app:layout_constraintTop_toTopOf="@id/type_none"
        app:layout_constraintStart_toEndOf="@id/type_none"
        app:layout_constraintEnd_toStartOf="@id/type_color_square"
        android:background="@android:color/white"
        app:riv_mutate_background="true"
        app:riv_corner_radius="12dp"

        app:riv_border_color="@color/FlatBlue"
/>
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/type_color_square"
        android:layout_width="62dp"
        android:layout_height="62dp"
        app:layout_constraintTop_toTopOf="@id/type_none"
        app:layout_constraintStart_toEndOf="@id/type_white_square"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/FlatOrange"
        app:riv_mutate_background="true"
        app:riv_corner_radius="12dp"
        android:src="@drawable/editor"

        app:riv_border_color="@color/FlatBlue"
        />
    <TextView
        android:id="@+id/text_none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal"
        android:maxLines="1"

        android:padding="8dp"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/type_none"
        app:layout_constraintStart_toStartOf="@id/type_none"
        app:layout_constraintEnd_toEndOf="@id/type_none"
        />
    <TextView
        android:id="@+id/text_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/white_square"
        android:maxLines="1"
        android:padding="8dp"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="@id/text_none"
        app:layout_constraintStart_toStartOf="@id/type_white_square"
        app:layout_constraintEnd_toEndOf="@id/type_white_square"
        />
    <TextView
        android:id="@+id/text_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"

        android:text="@string/color_square"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="@id/text_none"
        app:layout_constraintStart_toStartOf="@id/type_color_square"
        app:layout_constraintEnd_toEndOf="@id/type_color_square"
        />
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/rounded_value_label"
        app:layout_constraintBottom_toBottomOf="@id/rounded_value_label"
        app:layout_constraintStart_toStartOf="@id/rounded_value_label"
        app:layout_constraintEnd_toEndOf="@id/corner_seek_bar"
        android:background="@drawable/count_round"/>
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/rounded_value_label"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:paddingStart="20dp"

        app:layout_constraintTop_toBottomOf="@id/text_none"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:text="Corner radius"
        android:textColor="#FF444444"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <com.teamll.expectlauncher.ui.widgets.rangeseekbar.RangeSeekBar
        android:id="@+id/corner_seek_bar"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:rsb_mode="single"

        app:rsb_tick_mark_mode="number"
        app:rsb_indicator_text_size="14sp"
        app:rsb_tick_mark_text_array="@array/cornerArray"
        app:rsb_progress_color="@color/FlatGreen"
        app:rsb_progress_default_color="@color/rsbColorSeekBarDefault"
        app:rsb_tick_mark_text_color="#FF555555"
        app:rsb_thumb_drawable="@drawable/seekbar_thumb"
        app:rsb_indicator_height="25dp"
        app:rsb_min="5"
        app:rsb_max="20"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:rsb_tick_mark_text_margin="20dp"
        app:rsb_indicator_show_mode="alwaysHide"
        app:rsb_indicator_radius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rounded_value_label"
        app:layout_constraintTop_toTopOf="@id/rounded_value_label"
        />
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/background_color_label"
        app:layout_constraintBottom_toBottomOf="@id/background_color_label"
        app:layout_constraintStart_toStartOf="@id/rounded_value_label"
        app:layout_constraintEnd_toEndOf="@id/corner_seek_bar"
        android:background="@drawable/count_round"/>
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/background_color_label"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/rounded_value_label"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:text="Font Color"
        android:textColor="#FF444444"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        />
    <TextView
        android:id="@+id/auto_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Auto"
        android:padding="10dp"
        android:textColor="@color/BackwardColorHeavy"
        app:layout_constraintTop_toTopOf="@id/background_color_label"
        app:layout_constraintBottom_toBottomOf="@id/background_color_label"
        app:layout_constraintStart_toEndOf="@id/background_color_label"
        app:layout_constraintEnd_toStartOf="@id/white"
      />
    <TextView
        android:id="@+id/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="White"
        android:padding="10dp"
        android:textColor="@color/BackwardColorHeavy"
        app:layout_constraintTop_toTopOf="@id/background_color_label"
        app:layout_constraintBottom_toBottomOf="@id/background_color_label"
        app:layout_constraintStart_toEndOf="@id/auto_text"
        app:layout_constraintEnd_toStartOf="@id/black"/>
    <TextView
        android:id="@+id/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Black"
        android:padding="10dp"
        android:textColor="@color/BackwardColor"
        app:layout_constraintTop_toTopOf="@id/background_color_label"
        app:layout_constraintBottom_toBottomOf="@id/background_color_label"
        app:layout_constraintStart_toEndOf="@id/white"
        app:layout_constraintEnd_toStartOf="@id/hide_text"/>
    <TextView
        android:id="@+id/hide_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hidden"
        android:padding="10dp"
        android:textColor="@color/BackwardColor"
        app:layout_constraintTop_toTopOf="@id/background_color_label"
        app:layout_constraintBottom_toBottomOf="@id/background_color_label"
        app:layout_constraintStart_toEndOf="@id/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"/>
    <View
        android:id="@+id/show_if_normal_type"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/count_round_white_1"
        app:layout_constraintTop_toTopOf="@id/rounded_value_label"
        app:layout_constraintBottom_toBottomOf="@id/rounded_value_label"
        app:layout_constraintStart_toStartOf="@id/rounded_value_label"
        app:layout_constraintEnd_toEndOf="@id/corner_seek_bar"
        android:focusable="true"
        android:clickable="true"
        />
</android.support.constraint.ConstraintLayout>